@@ -6,6 +6,8 @@ New in 0.1.3
    switch to allow unstable interfaces, and unstable releases of XPLC
    have it enabled by default).
  * Added an "uninstall" make target.
+ * Renamed the static library libxplc.a and added a libxplc_s.a
+   symbolic link pointing to it.
  * Added a platform-independent dlopen/LoadLibrary abstraction.
  * Changed the simple dynamic loader so that it does not require a
    different binary interface from modules.
